--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,5 @@ Suggests:
     flextable
 Depends: 
     R (>= 2.10)
+URL: https://github.com/gigu003/manuscript
+BugReports: https://github.com/gigu003/manuscript/issues
